fix scroll on Ios

--- a/frontend/web/less/mobile/meet.less
+++ b/frontend/web/less/mobile/meet.less
@@ -1,5 +1,9 @@
 #show_meet{
+    width: 100%;
+    padding-bottom: 40px;
     height: auto;
+    display: block;
+    // min-height: 500px;
     .header{
         background: #08263a;
         padding: 7px 5px 3px;
@@ -53,7 +57,7 @@
         height: auto;
         width: 100%;
         padding: 0;
-        margin: 40px auto 80px;
+        margin: 40px auto;
         z-index: 5;
         .user_item{
             position: relative;
